[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/tiles/Ground.gd" type="Script" id=1]
[ext_resource path="res://game/EffectZone.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 20, 1, 40 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 40, 2, 80 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 4, 6, 40 )

[node name="Ground" type="KinematicBody"]
collision_layer = 16
collision_mask = 73
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="Effect" type="Spatial" parent="."]

[node name="LeftEffect" parent="Effect" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 6, 0 )

[node name="RightEffect" parent="Effect" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 6, 0 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -20, -1, -40, 40, 12, 80 )

[node name="Deactivate" type="Spatial" parent="."]

[node name="LeftDeactivate" type="Area" parent="Deactivate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 5, 0 )
collision_layer = 32
collision_mask = 72

[node name="CollisionShape" type="CollisionShape" parent="Deactivate/LeftDeactivate"]
shape = SubResource( 3 )

[node name="RightDeactivate" type="Area" parent="Deactivate"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26, 5, 0 )
collision_layer = 32
collision_mask = 72

[node name="CollisionShape" type="CollisionShape" parent="Deactivate/RightDeactivate"]
shape = SubResource( 3 )

[connection signal="effect_zone_entered" from="Effect/LeftEffect" to="." method="_on_effect_zone_entered"]
[connection signal="effect_zone_entered" from="Effect/RightEffect" to="." method="_on_effect_zone_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="body_entered" from="Deactivate/LeftDeactivate" to="." method="_on_Deactivate_body_entered"]
[connection signal="body_entered" from="Deactivate/RightDeactivate" to="." method="_on_Deactivate_body_entered"]
